Created endpoint for creating new products
